# tg_shop_mini_app

./: .dockerignore  .env.example  .env.exemple  .gitignore  docker-compose.yml
Bot/: bot.py  requirements.txt
backend/: Dockerfile  pyproject.toml
backend/App/: alembic.ini  main.py
backend/App/Core/: config.py  utils.py
backend/App/DataBase/: session.py
backend/App/Models/: __init__.py  order.py  product.py  user.py
backend/App/Repositories/: order_repository.py  product_repository.py  user_repository.py
backend/App/Routers/: order_router.py  product_router.py  user_router.py
backend/App/Schemas/: order.py  product.py  user.py
backend/App/Services/: order_service.py  product_service.py  user_service.py
backend/App/alembic/: env.py
backend/App/alembic/versions/: 1015df2b3022_init.py  58786ea36647_init.py  9714bf3c5762_base.py
bot/: Dockerfile
frontend/web-app/: Dockerfile  package-lock.json  package.json
frontend/web-app/public/: index.html
frontend/web-app/src/: App.js
frontend/web-app/src/api/: api.js
frontend/web-app/src/components/: CartSummary.jsx  ProductCard.jsx
frontend/web-app/src/styles/: App.css
nginx/: Dockerfile
nginx/conf.d/: default.conf
